--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,13 @@
 		<dependency>
 			<groupId>com.aerospike</groupId>
 			<artifactId>aerospike-client</artifactId>
-			<version>3.0.20</version>
+			<version>3.0.22</version>
+		</dependency>
+		<!-- MongoDB driver. -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.11.4</version>
 		</dependency>
 		<!-- Apache command line parser. -->
 		<dependency>
