--- a/restful/pom.xml
+++ b/restful/pom.xml
@@ -4,10 +4,15 @@
 	<artifactId>aerospike-recommendation-restful-service</artifactId>
 	<name>Simple Recommendation Engine</name>
 	<description>This is a simple recommendation engine using a RESTful web service using Spring Boot and Aerospike</description>
-	<parent>
+<!-- <parent>
 		<groupId>com.aerospike</groupId>
 		<artifactId>recommendation</artifactId>
 		<version>1.0.0</version>
+	</parent>  -->	
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>0.5.0.M4</version>
 	</parent>
 
 	<dependencies>
@@ -23,7 +28,7 @@
 		<dependency>
 			<groupId>com.aerospike</groupId>
 			<artifactId>aerospike-client</artifactId>
-			<version>3.0.22</version>
+			<version>3.0.23</version>
 		</dependency>
 		<!-- MongoDB driver. -->
 		<dependency>
@@ -54,6 +59,7 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>0.5.0.M1</version>
 		</dependency>
+		
 		<!-- JSON simple -->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
@@ -63,7 +69,7 @@
 	</dependencies>
 
 	<properties>
-		<start-class>com.aerospike.recommendation.rest.AerospikeRecommendationService</start-class>
+		<start-class>com.aerospike.recommendation.rest.RecommendationService</start-class>
 	</properties>
 
 	<build>
@@ -77,7 +83,38 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>0.5.0.M1</version>
 			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.aerospike.recommendation.rest.RecommendationService</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-my-jar-with-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/</directory>
+				<includes>
+					<include>**/*.properties</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 	<repositories>
