--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,5 +1,6 @@
-log4j.logger.com.aerospike.recommendation.dataimport.MoviesUploader=debug, CONSOLE
-log4j.logger.com.aerospike.recommendation.rest.RecommendationService=debug, CONSOLE
+log4j.logger.com.aerospike.recommendation=debug, CONSOLE
+log4j.logger.org.jboss.logging=info, CONSOLE
+log4j.logger.org.hibernate=info, CONSOLE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
